fixed out of boundaries playing bug

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -2,10 +2,7 @@
   background-color: #eff1ed;
   padding: 1rem;
   box-sizing: border-box;
-  //   height: 100%;
-  //   width: 70%;
   display: flex;
-  //   justify-content: space-between;
   border-radius: 1rem;
   gap: 1rem;
 }
@@ -19,7 +16,6 @@
 .slot {
   height: 6vw;
   width: 6vw;
-  aspect-ratio: 1/1;
   background-color: #36454f;
   border-radius: 50%;
   transition: all 0.2s;
@@ -34,7 +30,6 @@
   padding: 1rem;
   box-sizing: border-box;
   gap: 1rem;
-  //   width: 14%;
   transition: all 0.2s;
   border-radius: 0.5rem;
   cursor: pointer;
